# LoopEngine

./: .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
docs/: USER_MANUAL.md
loopengine/: __init__.py
loopengine/composition/: __init__.py  builder.py  bundles.py  config.py  flags.py  plugins.py
loopengine/evaluation/: __init__.py  benchmark.py  grader.py  judges.py  metrics.py
loopengine/evolution/: __init__.py  analysis.py  checkpoint.py  code_mod.py  diagnostics.py  loop_engine.py  promotion.py  strategies.py
loopengine/execution/: __init__.py  harness.py  runloop.py  sandbox.py  task.py
loopengine/primitives/: __init__.py  events.py  processors.py  state.py  tools.py  trajectory.py
tests/: conftest.py  test_analysis.py  test_benchmark.py  test_builder.py  test_bundles.py  test_checkpoint.py  test_code_mod.py  test_config.py  test_diagnostics.py  test_events.py  test_flags.py  test_grader.py  test_harness.py  test_integration.py  test_judges.py  test_loop_engine.py  test_metrics.py  test_plugins.py  test_processors.py  test_promotion.py  test_runloop.py  test_sandbox.py  test_state.py  test_strategies.py  test_task.py  test_tools.py  test_trajectory.py
typescript/: PORTING.md  README.md  package.json  tsconfig.json
typescript/src/: index.ts
typescript/tests/: KNOWN_DIFFERENCES.md  fixtures.ts  placeholder.test.ts  test_analysis.test.ts  test_benchmark.test.ts  test_builder.test.ts  test_bundles.test.ts  test_checkpoint.test.ts  test_code_mod.test.ts  test_config.test.ts  test_diagnostics.test.ts  test_events.test.ts  test_flags.test.ts  test_grader.test.ts  test_harness.test.ts  test_integration.test.ts  (+21 more)
(+52 files in other folders)
