[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "loopengine"
version = "0.1.0"
description = "A self-improving loop engineer agent framework"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE"]
authors = [
    {name = "LoopEngine Contributors"},
]
keywords = ["agent", "llm", "self-improvement", "code-modification", "benchmark"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pydantic>=2.0",
    "structlog>=23.0",
]

[project.urls]
Homepage = "https://github.com/loopengine/loopengine"
Repository = "https://github.com/loopengine/loopengine"
Issues = "https://github.com/loopengine/loopengine/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.0",
]
full = [
    "anthropic>=0.30",
    "openai>=1.0",
    "httpx>=0.27",
    "tiktoken>=0.7",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests (fast, no I/O)",
    "integration: Integration tests (may use filesystem/network)",
]

[tool.setuptools.packages.find]
include = ["loopengine*"]
